database/headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: application
  labels:
    app: postgres
    component: database
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
