database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: application
  labels:
    app: postgres
    component: database
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
